@@ -1,8 +1,8 @@
  # renovate: datasource=github-releases depName=microsoft/ApplicationInsights-Java
-ARG APP_INSIGHTS_AGENT_VERSION=2.5.1
+ARG APP_INSIGHTS_AGENT_VERSION=3.4.14
 
 # Application image
-FROM hmctspublic.azurecr.io/base/java:11-distroless
+FROM hmctspublic.azurecr.io/base/java:17-distroless
 
 LABEL maintainer=IDAM \
       owner="HM Courts & Tribunals Service"
@@ -15,9 +15,14 @@ LABEL maintainer=IDAM \
 ENV SERVER_PORT=8080
 
 ADD --chown=hmcts:hmcts build/libs/idam-web-public.war \
-                        lib/AI-Agent.xml \
-                        lib/applicationinsights-agent-2.5.1.jar /opt/app/
+                        lib/applicationinsights.json \
+                        lib/applicationinsights-agent-3.4.14.jar /opt/app/
 
-CMD ["-Dspring.profiles.active=docker,local", "idam-web-public.war"]
+CMD [ \
+     "-Dspring.profiles.active=docker,local", \
+     "--add-opens", "java.base/java.lang=ALL-UNNAMED", \
+     "--add-opens", "java.base/java.time=ALL-UNNAMED", \
+     "idam-web-public.war" \
+     ]
 
 EXPOSE 8080/tcp
